# windows-fat-files-lookup

./: .gitignore  Cargo.toml  README.md  build.rs  build_and_distribute.bat  monitor_log.bat  monitor_log.ps1
src/: disk_scanner.rs  file_utils.rs  logger.rs  main.rs
