[package]
name = "fat-folder-discovery"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Windows desktop application for discovering large files and folders on disk"
build = "build.rs"

[dependencies]
eframe = "0.33.0"
egui = "0.33.0"
egui_plot = "0.34.0"
walkdir = "2.4"
winapi = { version = "0.3", features = ["winuser", "fileapi", "handleapi", "processthreadsapi", "errhandlingapi", "winbase", "winnt", "shellapi"] }
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Threading", "Win32_UI_Shell"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25.8"
bytes = "1.0"
env_logger = "0.11.8"
log = "0.4"
ctrlc = "3.4"
